<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="id"
            app:title="나만의 App Title 입력"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="#0FA958"
            app:entries="@array/my_color"
            app:entryValues="@array/my_color_values"
            app:key="color"
            app:title="계절 테마 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="16.0f"
            app:entries="@array/my_size"
            app:entryValues="@array/my_size_values"
            app:key="size"
            app:title="크기 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="visible"
            app:entries="@array/my_visible"
            app:entryValues="@array/my_visible_values"
            app:key="visible"
            app:title="App Title 없애기"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>